Name:                live-fusion
Version:             0.1.0.0
Synopsis:            Runtime array fusion system for data parallel combinators
License:             BSD3
License-file:        LICENSE
Author:              George Roldugin
Maintainer:          groldugin@cse.unsw.edu.au
Category:            Data
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:
    -- Front end
    Data.LiveFusion.Combinators
    Data.LiveFusion.Types

    -- Loop language
    Data.LiveFusion.Loop
    Data.LiveFusion.Util
    Data.LiveFusion.AliasMap

    -- Scalar language
    Data.LiveFusion.Scalar.Convert
    Data.LiveFusion.Scalar.DeBruijn
    Data.LiveFusion.Scalar.HOAS
    Data.LiveFusion.Scalar.Sharing

    -- Abstract interface to the backends
    Data.LiveFusion.Backend

    -- Haskell backend
    Data.LiveFusion.HSBackend
    Data.LiveFusion.HSBackend.Prelude
    Data.LiveFusion.HSBackend.THDefinitions
    Data.LiveFusion.HsCodeGen
    Data.LiveFusion.HsEvaluator


  Other-Modules:

  GHC-Options: -Odph

  Build-Depends:
    base, containers, filepath, ghc-paths, ghc-prim, ghc >= 7.6, data-reify, vector, template-haskell, transformers, primitive, hashtables, hashable
