Name:                live-fusion
Version:             0.1.0.0
Synopsis:            Runtime array fusion system for data parallel combinators
License:             BSD3
License-file:        LICENSE
Author:              George Roldugin
Maintainer:          groldugin@cse.unsw.edu.au
Category:            Data
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:
    -- User facing
    Data.LiveFusion

    -- Frontend
    Data.LiveFusion.AST
    Data.LiveFusion.Combinators
    Data.LiveFusion.Types

    -- Loop language
    Data.LiveFusion.Fuse
    Data.LiveFusion.Loop
    Data.LiveFusion.LoopFunctions
    Data.LiveFusion.Sharing

    -- Scalar language
    Data.LiveFusion.Scalar.Convert
    Data.LiveFusion.Scalar.DeBruijn
    Data.LiveFusion.Scalar.HOAS
    Data.LiveFusion.Scalar.Sharing

    -- Abstract interface to the backends
    Data.LiveFusion.Backend

    -- Haskell backend
    Data.LiveFusion.HsBackend
    Data.LiveFusion.HsBackend.Impl
    Data.LiveFusion.HsBackend.Prelude
    Data.LiveFusion.HsBackend.THDefinitions
    Data.LiveFusion.HsBackend.Types
    Data.LiveFusion.HsCodeGen
    Data.LiveFusion.HsEvaluator

    -- Helper modules
    Data.LiveFusion.AliasMap
    Data.LiveFusion.DisjointSet
    Data.LiveFusion.Util


  Other-Modules:

  GHC-Options: -Odph

  Build-Depends:
    base,
    containers,
    data-reify,
    disjoint-set,
    filepath,
    ghc >= 7.6,
    ghc-paths,
    ghc-prim,
    hashable,
    hashtables,
    primitive,
    template-haskell,
    transformers,
    vector
