Name:                live-fusion
Version:             0.1.0.0
Synopsis:            Runtime array fusion system for data parallel combinators
License:             BSD3
License-file:        LICENSE
Author:              George Roldugin
Maintainer:          groldugin@cse.unsw.edu.au
Category:            Data
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:
    -- User facing
    Data.LiveFusion

    -- Frontend
    Data.LiveFusion.AST
    Data.LiveFusion.Evaluator
    Data.LiveFusion.Types

    -- AST Processing
    Data.LiveFusion.Sharing
    Data.LiveFusion.Fuse
    Data.LiveFusion.Liveness

    -- Loop language
    Data.LiveFusion.Loop
    Data.LiveFusion.Loop.LoopType
    Data.LiveFusion.Loop.Postprocess
    Data.LiveFusion.Loop.Common
    Data.LiveFusion.Loop.BlockMap
    Data.LiveFusion.Loop.Block
    Data.LiveFusion.Loop.Stmt
    Data.LiveFusion.Loop.Expr
    Data.LiveFusion.Loop.Label
    Data.LiveFusion.Loop.Var

    -- Scalar language
    Data.LiveFusion.Scalar.Convert
    Data.LiveFusion.Scalar.DeBruijn
    Data.LiveFusion.Scalar.HOAS
    Data.LiveFusion.Scalar.Sharing

    -- Abstract interface to the backends
    Data.LiveFusion.Backend

    -- Haskell backend
    Data.LiveFusion.HsBackend
    Data.LiveFusion.HsBackend.HsCodeGen
    Data.LiveFusion.HsBackend.HsEvaluator
    Data.LiveFusion.HsBackend.Impl
    Data.LiveFusion.HsBackend.Prelude
    Data.LiveFusion.HsBackend.THDefinitions
    Data.LiveFusion.HsBackend.Types    

    -- Helper modules
    Data.LiveFusion.AliasMap
    Data.LiveFusion.DisjointSet
    Data.LiveFusion.Util


  Other-Modules:

  GHC-Options: -Odph

  Build-Depends:
    base,
    containers,
    data-reify,
    disjoint-set,
    filepath,
    ghc >= 7.6,
    ghc-paths,
    ghc-prim,
    hashable,
    hashtables,
    primitive,
    template-haskell,
    transformers,
    vector
